# RustyGw2

./: Cargo.toml
Overlay/: Cargo.toml  build.rs
Overlay/helper/: Makefile  mumble_helper.cpp
Overlay/src/: custom_camera.rs  gw2link.rs  gw2poi.rs  main.rs  overlay_data.rs  processutils.rs  trail.rs  utils.rs
custom_window_plugin/: Cargo.toml
custom_window_plugin/src/: custom_window.rs  lib.rs  system.rs  winit_windows.rs
gw2_link/: Cargo.toml
gw2_link/src/: lib.rs
src/: main.rs
